Add initial HTML structure for PWA recipes app

--- a/index.html
+++ b/index.html
@@ -1,1 +1,80 @@
+<!DOCTYPE html>
+<html lang="pt">
+<head>
+    <meta charset="UTF-8">
+    <!-- Essencial para Mobile-First -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>PWA de Receitas - Chef Móvel</title>
+    
+    <!-- Link para o Manifest (Tarefa 5) -->
+    <link rel="manifest" href="/manifest.json">
 
+    <!-- Framework CSS Leve e Mobile-First (Pico CSS via CDN) -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1.5.10/css/pico.min.css">
+
+    <!-- Estilos Adicionais (opcional - crie um styles.css se necessário) -->
+    <!-- <link rel="stylesheet" href="styles.css"> -->
+
+    <!-- Importação do Firebase SDK (Tarefa 2) -->
+    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
+</head>
+<body>
+    <main class="container">
+        <!-- Título principal -->
+        <h1>Minhas Receitas PWA</h1>
+
+        <!-- 1. Conteúdo para a Lista de Receitas -->
+        <article id="view-lista-receitas">
+            <h2>Lista de Receitas</h2>
+            <p role="alert" id="status-conexao">A testar conexão com o Firestore...</p>
+            <div id="lista-receitas">
+                <!-- Receitas serão inseridas aqui via JS -->
+                <p aria-busy="true">A carregar receitas...</p>
+            </div>
+            <button onclick="mostrarFormulario()">Adicionar Nova Receita</button>
+        </article>
+
+        <!-- 2. Conteúdo para o Formulário (Oculto por padrão) -->
+        <article id="view-formulario" style="display: none;">
+            <h2>Adicionar/Editar Receita</h2>
+            <form id="formulario-receita">
+                <label for="titulo">Título da Receita</label>
+                <input type="text" id="titulo" name="titulo" required>
+
+                <label for="ingredientes">Ingredientes (um por linha)</label>
+                <textarea id="ingredientes" name="ingredientes" rows="5" required></textarea>
+
+                <label for="passos">Passos (instruções)</label>
+                <textarea id="passos" name="passos" rows="5"></textarea>
+
+                <button type="submit" id="btn-salvar-receita">Salvar Receita</button>
+                <button type="button" class="secondary" onclick="mostrarLista()">Cancelar</button>
+            </form>
+        </article>
+
+        <!-- 3. Conteúdo para a Lista de Compras (Oculto por padrão) -->
+        <article id="view-lista-compras" style="display: none;">
+            <h2>Lista de Compras</h2>
+            <div id="lista-compras-conteudo">
+                <p>Nenhum ingrediente adicionado.</p>
+            </div>
+            <button class="secondary" onclick="mostrarLista()">Voltar</button>
+        </article>
+    </main>
+
+    <!-- Barra de Navegação Móvel (Mobile-First Bottom Bar) -->
+    <nav class="container" style="position: fixed; bottom: 0; left: 0; width: 100%; padding: 10px 0; background-color: var(--pico-background-color);">
+        <ul>
+            <li><a href="#" role="button" onclick="mostrarLista()">🍽️ Receitas</a></li>
+            <li><a href="#" role="button" class="secondary" onclick="mostrarListaCompras()">🛒 Compras</a></li>
+            <li><a href="#" role="button" class="contrast" onclick="mostrarFormulario()">➕ Adicionar</a></li>
+        </ul>
+    </nav>
+    <div style="height: 60px;"></div> <!-- Espaço para a barra fixa -->
+
+    <!-- Scripts de inicialização do Firebase e o principal da aplicação -->
+    <script src="firebase-config.js"></script>
+    <script src="app.js"></script>
+</body>
+</html>
