--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
                     <h1>Receitas PWA</h1> <!-- Título Encurtado -->
                 </div>
                 <!-- Botão de Logout com estilo para ser compacto e garantir que cabe -->
-                <button id="btn-logout" class="contrast outline" style="margin: 0; padding: 0.5rem; white-space: nowrap; font-weight: bold; color: white !important;">🔓 Sair</button>
+                <button id="btn-logout" class="contrast outline" 
+            style="margin: 0; padding: 0.5rem; white-space: nowrap; font-weight: bold; font-size: 0.8rem; color: white !important; border-color: white !important;">
+        Sair
+                </button>
             </header>
 
             <!-- 1. Lista de Receitas (#recipes) -->
