--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
     </div>
 
     <!-- Caminho relativo para JS (Module) -->
-    <script type="module" src="./src/js/main.js"></script>
+    <script type="module" src="src/js/main.js"></script>
 </body>
 </html>
